최초업로드

--- a/css/style.css
+++ b/css/style.css
@@ -1009,7 +1009,7 @@ section#portfolio > .slides > .slides-container > figure > figcaption > .btn > a
 }
 section#portfolio > .slides > .slides-container > figure > figcaption > .btn > a:hover {
   color: #fff;
-  background-color: #ae9dce;
+  background-color: #9578d2;
 }
 section#portfolio > .slides > .slides-container > figure > figcaption > .shadow {
   display: none;
