--- a/css/style.scss
+++ b/css/style.scss
@@ -1041,7 +1041,7 @@ section#portfolio{
 
                         &:hover{
                             color: #fff;
-                            background-color: $sec-color-1;
+                            background-color: $pri-color-2;
                         }
                     }//a    
                 }//.btn
