--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+.notosanskr * { 
+ font-family: 'Noto Sans KR', sans-serif;
+}
+
 @font-face {
   font-family: 'GmarketSansMedium';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
@@ -35,7 +40,7 @@ $contTitle : 18px;
 $heavyTitle : 24px;
 $heading : 28px;
 $mainTitle : 32px;
-$subTitle : 26px;
+$subTitle : 28px;
 $solgan : 60px;
 
 //문자열변수
@@ -45,7 +50,7 @@ $mobile : "screen and (max-width:640px)";
   position: relative;
   min-width: 1200px;
   color: $pri-color-1;
-  font-family: 'GmarketSansMedium';
+  font-family: 'Noto Sans KR';
   letter-spacing: -0.5px;
 
   @media #{$mobile}{
@@ -232,11 +237,11 @@ header{
       top: 50%;
       margin-top: -13px;
       font-size: 16px;
-      font-weight: 400;
+      font-weight: 500;
       text-indent: 40px;
       background-image: url(./../images/logo.png);
       background-size: 12%;
-      background-position: 12px 0px;
+      background-position: 14px 6px;
       background-repeat: no-repeat;
 
       @media #{$mobile}{
@@ -326,8 +331,9 @@ header{
             padding: 0 15px;
             color: #666;
             font-weight: 600;
-            font-size: 11px;
+            font-size: 13px;
             line-height: 12px;
+            letter-spacing: 0px;
             transition: all 0.2s;
 
             @media #{$mobile}{
@@ -348,6 +354,7 @@ header{
   }//end of .container
 }//end of header
 
+
 header~section{
   padding-top: 80px;
 
@@ -361,6 +368,7 @@ header~section{
   }//end of h2
 }//end of header~section
 
+
 section#aboutme{
 
   strong{
@@ -370,6 +378,7 @@ section#aboutme{
 
   em{
     font-style:normal;
+    font-weight: 500;
     color:$sec-color-1;
   }
 
@@ -457,7 +466,7 @@ section#skill{
 
       >h3{
         font-size: $subTitle;
-        font-weight: 400;
+        font-weight: 500;
       }//end of h3
 
       >.web{
@@ -605,7 +614,7 @@ section#ability{
                       width: 180px;
                       height: 40px;
                       padding-right: 8%;
-                      font-weight:400;
+                      font-weight: 500;
                       font-size: 14px;
                       line-height: 6px;
                       text-align: center;
@@ -820,7 +829,7 @@ section#personality{
             }//end of h3
 
             >p{
-                font-weight:300;
+                font-weight:400;
                 line-height:1.5;
 
                 @media #{$mobile}{
@@ -913,6 +922,7 @@ section#portfolio{
             >a{
                 display: block;
                 height: 40px;
+                color: #222;
                 font-weight: 400;
                 font-size: 14px;
                 line-height: 40px;
@@ -1014,10 +1024,9 @@ section#portfolio{
                         width: 132px;
                         height: 40px;
                         margin-top: 30px;
-                        font-weight: 400;
+                        font-weight: 500;
                         font-size: 15px;
                         line-height: 42px;
-                        letter-spacing: 1px;
                         text-align: center;
                         color: #222;
                         background-color: #dedede;
@@ -1251,7 +1260,7 @@ section#portfolio{
                 >.view{
                   display: inline-block;
                   position: absolute;
-                  bottom: 7px;
+                  bottom: 5px;
   
                   height: 20px;
                   margin-left: 8px;
