--- a/works/pofol01/css/style.css
+++ b/works/pofol01/css/style.css
@@ -809,6 +809,7 @@ a:active {
 }
 @media screen and (max-width:640px) {
   #wrap > .content > .gallery {
+    width: 100%;
     height: 750px;
   }
 }
@@ -826,6 +827,7 @@ a:active {
     width: 100%;
     padding-left: 20px;
     margin-bottom: 10px;
+    box-sizing: border-box;
   }
 }
 #wrap > .content > .gallery > .bg-box {
@@ -874,8 +876,8 @@ a:active {
 }
 @media screen and (max-width:640px) {
   #wrap > .content > .gallery > .main-container > p {
-    top: 40px;
     left: 20px;
+    top: 40px;
     font-size: 14px;
   }
 }
